src/all_favorites/snapshots/folder_favorite__all_favorites__testing__add_non_existing_name.snap
---
source: src/all_favorites/mod.rs
expression: given_data
---
AllFavorites(
    [
        FavoriteFolderPath {
            name: NonEmptyText(
                "studium",
            ),
            location: NonEmptyText(
                "/home/some_user/Documents/Studium",
            ),
        },
        FavoriteFolderPath {
            name: NonEmptyText(
                "dev_rust",
            ),
            location: NonEmptyText(
                "/home/some_user/Code/rust",
            ),
        },
        FavoriteFolderPath {
            name: NonEmptyText(
                "proc_macro",
            ),
            location: NonEmptyText(
                "/home/some_user/Code/rust/proc-macro-workshop",
            ),
        },
        FavoriteFolderPath {
            name: NonEmptyText(
                "new_added",
            ),
            location: NonEmptyText(
                "~/some_data",
            ),
        },
    ],
)
