src/all_favorites/snapshots/folder_favorite__all_favorites__testing__filter_for_containing_names.snap
---
source: src/all_favorites/mod.rs
expression: actual
---
AllFavorites(
    [
        FavoriteFolderPath {
            name: NonEmptyText(
                "developing",
            ),
            location: NonEmptyText(
                "/home/some_user/Code/pyting",
            ),
        },
        FavoriteFolderPath {
            name: NonEmptyText(
                "looping",
            ),
            location: NonEmptyText(
                "/home/some_user/looping",
            ),
        },
    ],
)
