src/all_favorites/snapshots/folder_favorite__all_favorites__testing__name_found_rename_it.snap
---
source: src/all_favorites/mod.rs
expression: actual
---
AllFavorites(
    [
        FavoriteFolderPath {
            name: NonEmptyText(
                "studium",
            ),
            location: NonEmptyText(
                "/home/some_user/Documents/Studium",
            ),
        },
        FavoriteFolderPath {
            name: NonEmptyText(
                "other_dev_rust",
            ),
            location: NonEmptyText(
                "/home/some_user/Code/rust",
            ),
        },
        FavoriteFolderPath {
            name: NonEmptyText(
                "proc_macro",
            ),
            location: NonEmptyText(
                "/home/some_user/Code/rust/proc-macro-workshop",
            ),
        },
    ],
)
