src/all_favorites/snapshots/folder_favorite__all_favorites__testing__name_not_found_dont_remove_it.snap
---
source: src/all_favorites/mod.rs
expression: actual
---
AllFavorites(
    [
        FavoriteFolderPath {
            name: "studium",
            path: "/home/some_user/Documents/Studium",
        },
        FavoriteFolderPath {
            name: "dev_rust",
            path: "/home/some_user/Code/rust",
        },
        FavoriteFolderPath {
            name: "proc_macro",
            path: "/home/some_user/Code/rust/proc-macro-workshop",
        },
    ],
)
