src/all_favorites/snapshots/folder_favorite__all_favorites__testing__set_exisiting_favorite.snap
---
source: src/all_favorites/mod.rs
expression: given_data
---
AllFavorites(
    [
        FavoriteFolderPath {
            name: NonEmptyText(
                "studium",
            ),
            location: NonEmptyText(
                "/home/some_user/Documents/Studium",
            ),
        },
        FavoriteFolderPath {
            name: NonEmptyText(
                "dev_rust",
            ),
            location: NonEmptyText(
                "~/new_some_data",
            ),
        },
        FavoriteFolderPath {
            name: NonEmptyText(
                "proc_macro",
            ),
            location: NonEmptyText(
                "/home/some_user/Code/rust/proc-macro-workshop",
            ),
        },
    ],
)
